force-app/main/default/objects/Stock__c/fields/Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty__c</fullName>
    <formula>Inward_Quantity__c - Damaged_Qty__c -  Outward_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>