force-app/main/default/objects/Stock__c/fields/Batch_Product_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Batch_Product_Warehouse__c</fullName>
    <formula>Batch_Series_No__c &amp; &apos;_&apos; &amp; Product__c &amp; &apos;_&apos; &amp; Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Product Warehouse</label>
    <type>Text</type>
</CustomField>