force-app/main/default/objects/Stock__c/fields/Batch_Series_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_Series_No__c</fullName>
    <description>Batch no for the stock entry, should be unique value</description>
    <inlineHelpText>Batch no. should be unique</inlineHelpText>
    <label>Batch / Series No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>