force-app/main/default/objects/Stock__c/fields/Daily_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Daily_Consumption__c</fullName>
    <label>Daily Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>