force-app/main/default/objects/Stock__c/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>