force-app/main/default/objects/Stock__c/fields/Expire_date__c.field-meta.xml
<CustomField>
    <fullName>Expire_date__c</fullName>
    <label>Expire date</label>
    <type>Date</type>
</CustomField>