force-app/main/default/objects/Stock__c/fields/Hsn_Code__c.field-meta.xml
<CustomField>
    <fullName>Hsn_Code__c</fullName>
    <formula>Product__r.HSN_Code__c</formula>
    <label>Hsn Code</label>
    <type>Text</type>
</CustomField>