force-app/main/default/objects/Stock__c/fields/In_Transit_qty__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_qty__c</fullName>
    <label>In Transit qty</label>
    <summarizedField>In_Transit_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>In_Transit_Item__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>