force-app/main/default/objects/Stock__c/fields/Outward_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Outward_Quantity__c</fullName>
    <label>Outward Quantity</label>
    <summarizedField>Stock_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Stock_Item__c.Stock_Type__c</field>
        <operation>equals</operation>
        <value>Outward</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock_Item__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>