force-app/main/default/objects/Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Stock entry toward which specific product</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>