force-app/main/default/objects/Stock__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <formula>Product__r.Product_Category_Name__c</formula>
    <label>Product category</label>
    <type>Text</type>
</CustomField>