force-app/main/default/objects/Stock__c/fields/Purchased_Price_qty__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Price_qty__c</fullName>
    <label>Purchased Price / qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>