force-app/main/default/objects/Stock__c/fields/Purchased_UOM__c.field-meta.xml
<CustomField>
    <fullName>Purchased_UOM__c</fullName>
    <label>Purchased UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stock_UOM</valueSetName>
    </valueSet>
</CustomField>