force-app/main/default/objects/Stock__c/fields/Re_Order_Quanity__c.field-meta.xml
<CustomField>
    <fullName>Re_Order_Quanity__c</fullName>
    <label>Re-Order Quanity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>