force-app/main/default/objects/Stock__c/fields/Sales_Price_qty__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_qty__c</fullName>
    <label>Sales Price / qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>