force-app/main/default/objects/Stock__c/fields/Sales_UOM__c.field-meta.xml
<CustomField>
    <fullName>Sales_UOM__c</fullName>
    <label>Sales UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stock_UOM</valueSetName>
    </valueSet>
</CustomField>