force-app/main/default/objects/Stock__c/fields/Sku_Name__c.field-meta.xml
<CustomField>
    <fullName>Sku_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Sku Name</label>
    <type>Text</type>
</CustomField>