force-app/main/default/objects/Stock__c/fields/Sku_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Sku_Warehouse__c</fullName>
    <formula>Sku_Name__c &amp; &apos;_&apos; &amp; CASESAFEID(Warehouse__c )</formula>
    <label>Sku + Warehouse</label>
    <type>Text</type>
</CustomField>