force-app/main/default/objects/Stock__c/fields/Stock_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stock Ext. ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>