force-app/main/default/objects/Stock__c/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>