force-app/main/default/objects/Stock__c/fields/Uom__c.field-meta.xml
<CustomField>
    <fullName>Uom__c</fullName>
    <label>Uom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UOM</valueSetName>
    </valueSet>
</CustomField>