force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Series_No__c</columns>
    <columns>Product__c</columns>
    <columns>Warehouse__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>